@@ -67,6 +67,19 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|FileUtils
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|common
@@ -102,6 +115,21 @@ operator|.
 name|params
 operator|.
 name|ModifiableSolrParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|ShardParams
 import|;
 end_import
 begin_import
@@ -155,34 +183,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|util
-operator|.
-name|DateFormatUtil
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|plugin
-operator|.
-name|SolrCoreAware
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -220,11 +220,26 @@ name|org
 operator|.
 name|apache
 operator|.
-name|commons
+name|solr
 operator|.
-name|io
+name|util
 operator|.
-name|FileUtils
+name|DateFormatUtil
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|plugin
+operator|.
+name|SolrCoreAware
 import|;
 end_import
 begin_import
@@ -246,7 +261,7 @@ name|LoggerFactory
 import|;
 end_import
 begin_comment
-comment|/**  * Ping Request Handler for reporting SolrCore health to a Load Balancer.  *  *<p>  * This handler is designed to be used as the endpoint for an HTTP   * Load-Balancer to use when checking the "health" or "up status" of a   * Solr server.  *</p>  *   *<p>   * In its simplest form, the PingRequestHandler should be  * configured with some defaults indicating a request that should be  * executed.  If the request succeeds, then the PingRequestHandler  * will respond back with a simple "OK" status.  If the request fails,  * then the PingRequestHandler will respond back with the  * corrisponding HTTP Error code.  Clients (such as load balancers)  * can be configured to poll the PingRequestHandler monitoring for  * these types of responses (or for a simple connection failure) to  * know if there is a problem with the Solr server.  *</p>  *  *<pre class="prettyprint">  *&lt;requestHandler name="/admin/ping" class="solr.PingRequestHandler"&gt;  *&lt;lst name="invariants"&gt;  *&lt;str name="qt"&gt;/search&lt;/str&gt;&lt;!-- handler to delegate to --&gt;  *&lt;str name="q"&gt;some test query&lt;/str&gt;  *&lt;/lst&gt;  *&lt;/requestHandler&gt;  *</pre>  *  *<p>  * A more advanced option available, is to configure the handler with a   * "healthcheckFile" which can be used to enable/disable the PingRequestHandler.  *</p>  *  *<pre class="prettyprint">  *&lt;requestHandler name="/admin/ping" class="solr.PingRequestHandler"&gt;  *&lt;!-- relative paths are resolved against the data dir --&gt;  *&lt;str name="healthcheckFile"&gt;server-enabled.txt&lt;/str&gt;  *&lt;lst name="invariants"&gt;  *&lt;str name="qt"&gt;/search&lt;/str&gt;&lt;!-- handler to delegate to --&gt;  *&lt;str name="q"&gt;some test query&lt;/str&gt;  *&lt;/lst&gt;  *&lt;/requestHandler&gt;  *</pre>  *  *<ul>  *<li>If the health check file exists, the handler will execute the   *       delegated query and return status as described above.  *</li>  *<li>If the health check file does not exist, the handler will return   *       an HTTP error even if the server is working fine and the delegated   *       query would have succeeded  *</li>  *</ul>  *  *<p>   * This health check file feature can be used as a way to indicate  * to some Load Balancers that the server should be "removed from  * rotation" for maintenance, or upgrades, or whatever reason you may  * wish.    *</p>  *  *<p>   * The health check file may be created/deleted by any external  * system, or the PingRequestHandler itself can be used to  * create/delete the file by specifying an "action" param in a  * request:   *</p>  *  *<ul>  *<li><code>http://.../ping?action=enable</code>  *       - creates the health check file if it does not already exist  *</li>  *<li><code>http://.../ping?action=disable</code>  *       - deletes the health check file if it exists  *</li>  *<li><code>http://.../ping?action=status</code>  *       - returns a status code indicating if the healthcheck file exists   *       ("<code>enabled</code>") or not ("<code>disabled</code>")  *</li>  *</ul>  *  * @since solr 1.3  */
+comment|/**  * Ping Request Handler for reporting SolrCore health to a Load Balancer.  *  *<p>  * This handler is designed to be used as the endpoint for an HTTP   * Load-Balancer to use when checking the "health" or "up status" of a   * Solr server.  *</p>  *   *<p>   * In its simplest form, the PingRequestHandler should be  * configured with some defaults indicating a request that should be  * executed.  If the request succeeds, then the PingRequestHandler  * will respond back with a simple "OK" status.  If the request fails,  * then the PingRequestHandler will respond back with the  * corresponding HTTP Error code.  Clients (such as load balancers)  * can be configured to poll the PingRequestHandler monitoring for  * these types of responses (or for a simple connection failure) to  * know if there is a problem with the Solr server.  *   * Note in case isShard=true, PingRequestHandler respond back with   * what the delegated handler returns (by default it's /select handler).  *</p>  *  *<pre class="prettyprint">  *&lt;requestHandler name="/admin/ping" class="solr.PingRequestHandler"&gt;  *&lt;lst name="invariants"&gt;  *&lt;str name="qt"&gt;/search&lt;/str&gt;&lt;!-- handler to delegate to --&gt;  *&lt;str name="q"&gt;some test query&lt;/str&gt;  *&lt;/lst&gt;  *&lt;/requestHandler&gt;  *</pre>  *  *<p>  * A more advanced option available, is to configure the handler with a   * "healthcheckFile" which can be used to enable/disable the PingRequestHandler.  *</p>  *  *<pre class="prettyprint">  *&lt;requestHandler name="/admin/ping" class="solr.PingRequestHandler"&gt;  *&lt;!-- relative paths are resolved against the data dir --&gt;  *&lt;str name="healthcheckFile"&gt;server-enabled.txt&lt;/str&gt;  *&lt;lst name="invariants"&gt;  *&lt;str name="qt"&gt;/search&lt;/str&gt;&lt;!-- handler to delegate to --&gt;  *&lt;str name="q"&gt;some test query&lt;/str&gt;  *&lt;/lst&gt;  *&lt;/requestHandler&gt;  *</pre>  *  *<ul>  *<li>If the health check file exists, the handler will execute the   *       delegated query and return status as described above.  *</li>  *<li>If the health check file does not exist, the handler will return   *       an HTTP error even if the server is working fine and the delegated   *       query would have succeeded  *</li>  *</ul>  *  *<p>   * This health check file feature can be used as a way to indicate  * to some Load Balancers that the server should be "removed from  * rotation" for maintenance, or upgrades, or whatever reason you may  * wish.    *</p>  *  *<p>   * The health check file may be created/deleted by any external  * system, or the PingRequestHandler itself can be used to  * create/delete the file by specifying an "action" param in a  * request:   *</p>  *  *<ul>  *<li><code>http://.../ping?action=enable</code>  *       - creates the health check file if it does not already exist  *</li>  *<li><code>http://.../ping?action=disable</code>  *       - deletes the health check file if it exists  *</li>  *<li><code>http://.../ping?action=status</code>  *       - returns a status code indicating if the healthcheck file exists   *       ("<code>enabled</code>") or not ("<code>disabled</code>")  *</li>  *</ul>  *  * @since solr 1.3  */
 end_comment
 begin_class
 DECL|class|PingRequestHandler
@@ -809,6 +824,58 @@ operator|instanceof
 name|PingRequestHandler
 condition|)
 block|{
+comment|// In case it's a query for shard, use default handler
+if|if
+condition|(
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|ShardParams
+operator|.
+name|IS_SHARD
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
+name|handler
+operator|=
+name|core
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|wparams
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|(
+name|params
+argument_list|)
+decl_stmt|;
+name|wparams
+operator|.
+name|remove
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|setParams
+argument_list|(
+name|wparams
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 throw|throw
 operator|new
 name|SolrException
@@ -823,12 +890,92 @@ literal|"Cannot execute the PingRequestHandler recursively"
 argument_list|)
 throw|;
 block|}
+block|}
 comment|// Execute the ping query and catch any possible exception
 name|Throwable
 name|ex
 init|=
 literal|null
 decl_stmt|;
+comment|// In case it's a query for shard, return the result from delegated handler for distributed query to merge result
+if|if
+condition|(
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|ShardParams
+operator|.
+name|IS_SHARD
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
+name|core
+operator|.
+name|execute
+argument_list|(
+name|handler
+argument_list|,
+name|req
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|ex
+operator|=
+name|rsp
+operator|.
+name|getException
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|ex
+operator|=
+name|e
+expr_stmt|;
+block|}
+comment|// Send an error or return
+if|if
+condition|(
+name|ex
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Ping query caused exception: "
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|ex
+argument_list|)
+throw|;
+block|}
+block|}
+else|else
+block|{
 try|try
 block|{
 name|SolrQueryResponse
@@ -906,6 +1053,7 @@ argument_list|,
 literal|"OK"
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 DECL|method|handleEnable
 specifier|protected
