@@ -34,6 +34,15 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -54,6 +63,87 @@ operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|embedded
+operator|.
+name|JettySolrRunner
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|CloudSolrClient
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|SolrPing
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|SolrPingResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|cloud
+operator|.
+name|MiniSolrCloudCluster
 import|;
 end_import
 begin_import
@@ -136,6 +226,27 @@ name|PingRequestHandlerTest
 extends|extends
 name|SolrTestCaseJ4
 block|{
+DECL|field|NUM_SERVERS
+specifier|protected
+name|int
+name|NUM_SERVERS
+init|=
+literal|5
+decl_stmt|;
+DECL|field|NUM_SHARDS
+specifier|protected
+name|int
+name|NUM_SHARDS
+init|=
+literal|2
+decl_stmt|;
+DECL|field|REPLICATION_FACTOR
+specifier|protected
+name|int
+name|REPLICATION_FACTOR
+init|=
+literal|2
+decl_stmt|;
 DECL|field|fileName
 specifier|private
 specifier|final
@@ -808,6 +919,249 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testPingInClusterWithNoHealthCheck
+specifier|public
+name|void
+name|testPingInClusterWithNoHealthCheck
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|File
+name|solrXml
+init|=
+operator|new
+name|File
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|TEST_HOME
+argument_list|()
+argument_list|,
+literal|"solr-no-core.xml"
+argument_list|)
+decl_stmt|;
+name|MiniSolrCloudCluster
+name|miniCluster
+init|=
+operator|new
+name|MiniSolrCloudCluster
+argument_list|(
+name|NUM_SERVERS
+argument_list|,
+name|createTempDir
+argument_list|()
+operator|.
+name|toFile
+argument_list|()
+argument_list|,
+name|solrXml
+argument_list|,
+name|buildJettyConfig
+argument_list|(
+literal|"/solr"
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|CloudSolrClient
+name|cloudSolrClient
+init|=
+name|miniCluster
+operator|.
+name|getSolrClient
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|assertNotNull
+argument_list|(
+name|miniCluster
+operator|.
+name|getZkServer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|JettySolrRunner
+argument_list|>
+name|jettys
+init|=
+name|miniCluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|NUM_SERVERS
+argument_list|,
+name|jettys
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|JettySolrRunner
+name|jetty
+range|:
+name|jettys
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|jetty
+operator|.
+name|isRunning
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// create collection
+name|String
+name|collectionName
+init|=
+literal|"testSolrCloudCollection"
+decl_stmt|;
+name|String
+name|configName
+init|=
+literal|"solrCloudCollectionConfig"
+decl_stmt|;
+name|File
+name|configDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|TEST_HOME
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"collection1"
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"conf"
+argument_list|)
+decl_stmt|;
+name|miniCluster
+operator|.
+name|uploadConfigDir
+argument_list|(
+name|configDir
+argument_list|,
+name|configName
+argument_list|)
+expr_stmt|;
+name|miniCluster
+operator|.
+name|createCollection
+argument_list|(
+name|collectionName
+argument_list|,
+name|NUM_SHARDS
+argument_list|,
+name|REPLICATION_FACTOR
+argument_list|,
+name|configName
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+comment|// Send distributed and non-distributed ping query
+name|SolrPingWithDistrib
+name|reqDistrib
+init|=
+operator|new
+name|SolrPingWithDistrib
+argument_list|()
+decl_stmt|;
+name|reqDistrib
+operator|.
+name|setDistrib
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|SolrPingResponse
+name|rsp
+init|=
+name|reqDistrib
+operator|.
+name|process
+argument_list|(
+name|cloudSolrClient
+argument_list|,
+name|collectionName
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rsp
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrPing
+name|reqNonDistrib
+init|=
+operator|new
+name|SolrPing
+argument_list|()
+decl_stmt|;
+name|rsp
+operator|=
+name|reqNonDistrib
+operator|.
+name|process
+argument_list|(
+name|cloudSolrClient
+argument_list|,
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rsp
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// delete the collection we created earlier
+name|miniCluster
+operator|.
+name|deleteCollection
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|miniCluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|/**    * Helper Method: Executes the request against the handler, returns     * the response, and closes the request.    */
 DECL|method|makeRequest
 specifier|private
@@ -853,6 +1207,40 @@ block|}
 return|return
 name|rsp
 return|;
+block|}
+DECL|class|SolrPingWithDistrib
+class|class
+name|SolrPingWithDistrib
+extends|extends
+name|SolrPing
+block|{
+DECL|method|setDistrib
+specifier|public
+name|SolrPing
+name|setDistrib
+parameter_list|(
+name|boolean
+name|distrib
+parameter_list|)
+block|{
+name|getParams
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"distrib"
+argument_list|,
+name|distrib
+condition|?
+literal|"true"
+else|:
+literal|"false"
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
 block|}
 block|}
 end_class
